scrollbar fix

--- a/src/app/Portfolio/_mobilePortfolio.scss
+++ b/src/app/Portfolio/_mobilePortfolio.scss
@@ -919,4 +919,17 @@
     background-color: transparent !important;
     display: none !important;
   }
+  div::-webkit-scrollbar {
+    width: 0rem !important;
+    height: 0rem !important;
+    background-color: transparent !important;
+    display: none !important;
+  }
+  div::-webkit-scrollbar-thumb {
+    height: 0rem !important;
+    width: 0rem !important;
+    background-color: transparent !important;
+    display: none !important;
+  }
+  
 }
